<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/station_start_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_station" />

        <TextView
            android:id="@+id/station_start_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_station_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/station_end_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_station" />

        <TextView
            android:id="@+id/station_end_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_station_name2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus_first_time" />

        <TextView
            android:id="@+id/bus_first_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_start_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/bus_end_time" />

        <TextView
            android:id="@+id/bus_last_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_end_time" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/next_depart_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_depart_time" />

        <TextView
            android:id="@+id/next_depart_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/next_depart_title"
            android:text="@string/test_start_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/update_time"
            android:text="@string/last_update" />

        <TextView
            android:id="@+id/update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/test_start_time" />
    </RelativeLayout>
</LinearLayout>