<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/station_name"
        style="@style/header_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_station_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_subscribe_info"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_time" />

            <TextView
                android:id="@+id/notify_time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_start_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_time_split" />

            <TextView
                android:id="@+id/notify_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_end_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_date" />

            <TextView
                android:id="@+id/notify_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_notification_date" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
