<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/station_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_station_name"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locate" />

        <TextView
            android:id="@+id/station_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_station_address" />
    </LinearLayout>

    <TextView
        android:id="@+id/station_bus_lines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_bus_lines" />
</LinearLayout>