<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/station_name"
        style="@style/header_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_station_name" />

    <RelativeLayout
        android:id="@+id/bus_line_root"
        style="@style/content_bus_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bus_line_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/test_bus_line_name" />

        <TextView
            android:id="@+id/bus_line_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/test_bus_line_status" />
    </RelativeLayout>

    <View style="@style/paring_line" />
</LinearLayout>